--- a/presentation/ma-presentation.Rmd
+++ b/presentation/ma-presentation.Rmd
@@ -103,6 +103,9 @@ knitr::include_graphics("../figures/cross-degree.jpg")
 - They investigate the correlation over time of NTAO and STAO
 and its relationship to droughts in the  CAB
 
+
+## Early warning signal 
+
 ```{r early, echo = FALSE, fig.align='center' ,out.width='75%', fig.cap='Early-warning signal for droughts in the central Amazon basin. We compare the time evolution of the average cross-correlation of the Northern Tropical Atlantic Ocean (NTAO) and Southern Tropical Atlantic Ocean (STAO), given by the blue curve, with the standardized precipitation index (SPI, orange) of the central Amazon basin. Orange dips indicate a negative SPI with a threshold for severely dry periods (SPI -1, dotted red line). We expect a drought event within the following one and a half years whenever the average cross-correlation between NTAO and STAO SST anomalies falls below an empirically found threshold of -0.06. Green circles indicate a matching forecast based on the Atlantic SST correlation structure, with one false alarm in 2002 indicated by a grey circle, where the threshold is crossed, but no drought took place in the direct aftermath (see Discussion). The temporal evolution of the average cross-correlation shown here is smoothed using a Chebyshev type-I low-pass filter with a cutoff at 24 months (Ciemer et al. (2020)).'}
 knitr::include_graphics("../figures/early-warning-signals.jpg")
 ```
@@ -118,7 +121,7 @@ knitr::include_graphics("../figures/early-warning-signals.jpg")
 # Explorative analysis
 
 ## The data
-- Rain data from CHIRPS ()
+- Rain data from CHIRPS (Climate Hazards Group InfraRed Precipitation woth Station data)
 - CHIRPS contains in-situ and satellite data
 - SST data from ERSST (Extended Reconstructed Sea Surface Temperature)
 - ERSST is reanalysis of observation data (made by ships and buoys for example), missing data filled by interpolation techniques
@@ -126,17 +129,87 @@ knitr::include_graphics("../figures/early-warning-signals.jpg")
 
 ## Explorative analysis Rain
 
-- show area
-- show mean and sd
-- show glyph plots
+```{r CAB, echo=FALSE, fig.cap="Location of the area under study. The central amazon basin (CAB) spanning across 0,-10 latitude and -70,-55 longitude", fig.align='center',out.width='50%'}
+cab_square_plot <- readRDS("../results/eda/cab_square_plot.rds")
+cab_square_plot + ggtitle("Location of area under study, central Amazon basin (CAB)")
+```
+
+## Precipitation, Mean and SD
+
+```{r , fig.cap="Precipitation mean at each location. The mean was computed over the whole time period"}
+precip_means_loc_plot <- readRDS("../results/eda/precip_means_loc_plot.rds")
+precip_means_loc_plot$labels$title <- NULL
+precip_means_loc_plot$labels$fill <- "Mean"
+# precip_means_loc_plot
+# precip_means_loc_plot + theme(panel.background = element_rect(fill='transparent'),
+#          plot.background = element_rect(fill='transparent', color=NA),
+#          panel.grid.major = element_blank(),
+#          panel.grid.minor = element_blank(),
+#          legend.background = element_rect(fill='transparent'),
+#          legend.box.background = element_rect(fill='transparent'))
+# precip_means_loc_plot + scale_fill_gradient2(low="brown", high ="dark green", midpoint = mean(precip_means_loc_plot$data$val, na.rm = TRUE))
+```
+
+```{r, fig.cap="Precipitation standard deviation at each location. The standard deviation was computed over the whole time period"}
+precip_sds_loc_plot <- readRDS("../results/eda/precip_sds_loc_plot.rds")
+precip_sds_loc_plot$labels$fill <- "SD"
+```
+
+```{r, mean-sd-precip, fig.cap= "Mean and standard deviation at each location. The standard deviation was computed over the whole time period. The white line on the scale at the side of the plots indicates the mean of the respective quantity", fig.align='center', out.width='50%'}
+p <- precip_means_loc_plot +  precip_sds_loc_plot  +
+  plot_annotation("Precipitation mean and SD at each CAB location")
+p
+```
+
+## Precipitation Glyph Plots
+
+
+```{r, echo=FALSE}
+knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(warning = FALSE)
+knitr::opts_chunk$set(out.width = '75%', fig.align = 'center')
+library(ggtext)
+ptp <- "../results/"
+```
+
+```{r, glyph-scale,fig.cap="Glyph map of de-seasonalised and smoothed precipitation. The time series are scaled locally, ranges are not the same in all cells. The different ranges are given in color shades, where lighter shading indicates a larger range and darker shades smaller ranges."}
+smoothed_scaled_colour_plot <- readRDS(paste0(ptp, "smoothed_scaled_colour_plot.rds"))
+smoothed_scaled_colour_plot + ggtitle("Glyph map of smoothed de-seasonalised monthly precipitation, locally scaled") +
+  #theme(plot.title = element_textbox_simple()) +
+  theme(legend.position = "bottom") 
+```
 
 ## Explorative analysis SST
 
-- show mean and sd
+```{r, }
+sst_means_loc_plot <- readRDS("../results/eda/sst_means_loc_plot.rds")
+sst_means_loc_plot <- sst_means_loc_plot + ggtitle(NULL)
+sst_means_loc_plot$labels$fill <- "Mean"
+sst_means_loc_plot <- sst_means_loc_plot + scale_fill_gradient2(low = "blue", high = "red", midpoint=mean(sst_means_loc_plot$data$val, na.rm=TRUE))
+```
+```{r, fig.cap="SST standard deviation at each location. We computed the standard deviation over the whole time period"}
+sst_sds_loc_plot <- readRDS("../results/eda/sst_sds_loc_plot.rds")
+sst_sds_loc_plot$labels$fill <- "SD"
+sst_sds_loc_plot <- sst_sds_loc_plot + scale_fill_gradient2(low = "blue", high = "red", midpoint=mean(sst_sds_loc_plot$data$val, na.rm=TRUE))
+```
+```{r mean-and-sd-sst-og, fig.cap="Mean and SD on the global map.The color scales show the mean for the shown variable as white.",  out.width='50%'}
+sst_means_loc_plot + sst_sds_loc_plot +
+  plot_annotation("Global SST mean and SD at each location")
+```
 
 # Correlation analysis
 
-- show timelag 0, raw and de-seasonalized
+## Correlation plot original SST
+
+```{r corr-0, echo = FALSE, out.width='65%', out.height='65%',fig.show='hold',fig.align='center', fig.cap='Correlation plot between SST and mean precipitation in the CAB for timelag 0'}
+knitr::include_graphics("../code/Rmarkdown/plots-markdown/og-data/corr-0.jpg")
+```
+
+
+## Correlation plot de-seasonalized SST
+```{r corr-0q, echo = FALSE, out.width='65%', out.height='65%',fig.show='hold',fig.align='center', fig.cap='Correlation plot between des-seasonalized SST and mean precipitation in the CAB for timelag 0'}
+knitr::include_graphics("../code/Rmarkdown/plots-markdown/des-data/corr-0.jpg")
+```
 
 # Clustering
 ## Motivation/ Overview 
@@ -500,7 +573,7 @@ controls the sparsity of the coefficients.
 
 ## Fused lasso optimization
 
-- Lets consider the problem in the notation of the generalizes lasso problem
+- Lets consider the problem in the notation of the generalized lasso problem
 
 \begin{equation}
 \hat{\beta}=\underset{\beta \in \mathbb{R}^{p}}{\arg \min } \frac{1}{2}\|y-X \beta\|_{2}^{2}+\lambda\|D \beta\|_{1},
@@ -676,7 +749,7 @@ ggsave(paste0(path_to_model_folder, "coef-plots/coef-plot-full.png"), plot = coe
 knitr::include_graphics(paste0(path_to_model_folder, "coef-plots/coef-plot-full.png"))
 ```
 
-## Coefficient plot, highest values only
+## Coefficient plot, highest absolute values only
 
 ```{r}
 # coef_plot2 <- readRDS(paste0(path_to_model_folder,
@@ -690,11 +763,68 @@ knitr::include_graphics(paste0(path_to_model_folder, "coef-plots/coef-plot-drop-
 
 ```
 
-## Coefficient plot, lowest values only
+## Coefficient plot, lowest absolute values only
 
 ```{r}
 knitr::include_graphics(paste0(path_to_model_folder, "coef-plots/coef-plot-drop-out-full2.png"))
 ```
+
+
+## Fused lasso results summary
+
+- We compared different settings for the fused lasso, removing the sub-graphs and introducing no sparsity gave the best results
+- Removing the sub-graphs removed some of the optimization problems, but nodes with less edges are still less penalized
+- Implementing a validation strategy was more complex than for the lasso
+- We smoothed the error-lines in each fold over a common region to compute $\lambda_{\min}$
+- The coefficient plots reveal predictive areas with high negative values in the Baltic Sea and high positive values north east of Canada.
+- Since no sparsity is used, all areas obtain non-zero coefficient values
+
+## Fused lasso discussion
+
+- Computing the solution path is computationally expensive
+- The graph structure is highly influential and cost will scale with number of edges
+- While the best fused lasso approach performed best overall, it still is not able to predict high precipitation values
+- Possible improvements on optimization path: creating weighted graph (increases number of edges and cost), narrowing down the SST "window" (f.e as in @ciemer2020early)
+- Possible improvements on feature engineering: as for the lasso, differentiating, de-seasonalizing
+
+# Discussion & Conclusion
+
+## Discussion
+
+- Our results suggest that precipitation can to some extend be predicted from SST directly.
+- The overall predictability of precipitation in the CAB differed between model selection and model evaluation phase.
+- For one part this might be due to the difference in the regions in the CAB, since clustering improved the results for one specific cluster.
+- Another explanation could be that our model selection approach was not optimal in its use of the data.
+- We might have been to restrictive in exploiting the data or used data that became less relevant over time.
+
+## Discussion 
+
+- Possible other approaches:
+- Allow for larger folds (introduces overlapping folds), or for crossing of train and test in time (past is predicted with future values)
+- Fit the full model with less data and discarding data that is far away from the hold-out validation set.
+- The results of the fused lasso will depend a lot on the graph structure, sub-graphs do not represent the real situation well
+- Creating a weighted graph or narrowing the SST "window" may improve performance.
+- Also, applying the fused lasso only on the best performing cluster from the lasso may yield better results.
+
+
+## Conclusion
+
+- In a descriptive analysis we found temporal and spatial patterns in the correlation of rain in the CAB and SST
+- The cluster analysis revealed 5 almost completely spatially coherent clusters in the CAB
+- Standardizing the features yielded the best results for the lasso
+- The lasso can predict the precipitation on the model selection test sets a lot better than in the hold-out test set
+- On the hold-out data the lasso fails to predict the peaks in precipitation
+
+## Conclusion 
+
+- We applied the fused lasso to our problem and implemented a model evaluation approach
+- The fused lasso improves predictive power compared to the lasso when the sub-graphs are removed
+- The fused lasso is still is not able to predict high values in precipitation well
+- We could further improve the clustering method by taking into account spatial dependencies.
+- The fused lasso could be improved by using other model selection approaches or increasing the complexity of the graph structure.
+
+
+# Appendix
 
 
 ## Fused evaluation (maybe explain this when showing resutls)
@@ -706,14 +836,4 @@ beforehand.
 - So to find $\lambda_{\min}$ we search over the common range of all folds and interpolate to lines
 - $\lambda_{\min}$ is then the $\lambda$ that minimize MSE over all $\lambda$ of that common range
 
-## Fusedlasso results
-
-
-
-# Graph structure
-# Fused results
-
-# Summary
-
-# Important test
 
